# cpu-sim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/cpusim/: CPU.h  cpusim.h
src/: CPU.cpp  tests.cpp  tests2.cpp
